more product carousel and fancybox fixes

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -8,7 +8,7 @@
         
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
 
-        <link rel="icon" type="image/png" href="img/ui/favicon.png" />
+        <link rel="icon" type="image/png" href="<?php echo $this->basePath('img/ui/favicon.png'); ?>" />
         
         <!-- Le styles -->
         <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/png', 'href' => $this->basePath() . '/img/ui/favicon.png'))
