more product carousel and fancybox fixes

--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -135,10 +135,10 @@
                                     <a href="#beskrivning" title="Beskrivning"><img src="/img/ui/icons/menu.svg"></a>
                                 </li>
                                 <li>
-                                    <a href="#rabatter" title="Mängdrabatter"><img src="/img/ui/icons/rebate.svg"></a>
+                                    <a href="#rabatter" title="Mängdrabatter"><img src="/img/ui/icons/price.svg"></a>
                                 </li>
                                 <li>
-                                    <a href="#specifikation">Specifikationer</a>
+                                    <a href="#specifikation" title="Specifikationer"><img src="/img/ui/icons/list.svg"></a>
                                 </li>
                                 <li>
                                     <a href="#tillbehor">Tillbehör</a>
