--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1437,6 +1437,7 @@ h2 {
 }
 
 #body .container .content .content_tabs li a {
+    
     display: block;
     height: 100%;
     width: 100%;
@@ -1465,6 +1466,8 @@ h2 {
 }
 
 #body .container .content .content_tabs li a img {
+    transition: all 300ms ease-in-out;
+    
     display: block;
     width: 20px;
     height: 20px;
