Fixing database stuff and product page information tabs

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -15,7 +15,7 @@
                         ->prependStylesheet( $this->basePath('/css/layout.css') ); ?>
 
         <!-- Scripts -->
-        <?php echo $this->headScript()->prependFile( $this->basePath( '/plugins/dotdotdot/jquery.dotdotdot.min.js' ) )
+        <?php echo $this->headScript()->prependFile( $this->basePath( '/plugins/dotdotdot/jquery.dotdotdot.js' ) )
                                       ->prependFile( $this->basePath( '/js/jquery.transit.min.js' ) )
                                       ->prependFile( $this->basePath( '/plugins/event.swipe/js/jquery.event.swipe.js' ) )
                                       ->prependFile( $this->basePath( '/plugins/event.move/js/jquery.event.move.js' ) )
