--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -1,5 +1,7 @@
 <?php
-    $this->inlineScript()->appendFile( $this->basePath('/plugins/ldscarousel/js/jquery.ldscarousel.js') );
+    $this->inlineScript()->appendFile( $this->basePath('/plugins/ldscarousel/js/jquery.ldscarousel.js') )
+                         ->appendFile( $this->basePath('/js/products.js') );
+    
     $this->headScript()->prependFile( $this->basePath('/plugins/fancybox/js/jquery.fancybox-thumbs.js') )
                        ->prependFile( $this->basePath('/plugins/fancybox/js/jquery.fancybox.js') );
     
@@ -7,6 +9,7 @@
                      ->appendStylesheet( $this->basePath('/plugins/fancybox/css/jquery.fancybox-buttons.css') )
                      ->appendStylesheet( $this->basePath('/plugins/fancybox/css/jquery.fancybox-thumbs.css') )
                      ->appendStylesheet( $this->basePath('/plugins/ldscarousel/css/jquery.ldscarousel.css') )
+                     ->appendStylesheet( $this->basePath('/css/products.css') )
                      ;
 ?>
                     
@@ -132,34 +135,106 @@
                             
                             <ul class="content_tabs">
                                 <li class="active">
-                                    <a href="#beskrivning" title="Beskrivning"><img src="/img/ui/icons/menu.svg"></a>
+                                    <a href="#beskrivning" title="Beskrivning"><img src="/img/ui/icons/information.svg" alt="Beskrivning"></a>
                                 </li>
                                 <li>
-                                    <a href="#rabatter" title="Mängdrabatter"><img src="/img/ui/icons/price.svg"></a>
+                                    <a href="#rabatter" title="Priser"><img src="/img/ui/icons/price.svg" alt="Priser"></a>
                                 </li>
                                 <li>
-                                    <a href="#specifikation" title="Specifikationer"><img src="/img/ui/icons/list.svg"></a>
+                                    <a href="#specifikation" title="Specifikationer"><img src="/img/ui/icons/list.svg" alt="Specifikationer"></a>
                                 </li>
                                 <li>
                                     <a href="#tillbehor">Tillbehör</a>
                                 </li>
                             </ul>
                             
-                            <div id="beskrivning" class="content_data">
-                            <?php
-                                $paragraphs = explode( "\r\n\r\n" , $value['product_description'] );
-                                foreach( $paragraphs  as $p_key => $p_value ){
-                                    echo( "<p>".$p_value."</p>\n\n" );
-                                }
-                            ?>
-                            </div>
+                            <div class="content_information">
+                                <div id="beskrivning" class="content_data active">
+                                <h4>Beskrivning</h4>
+                                <?php
+                                    $paragraphs = explode( "\r\n\r\n" , $value['product_description'] );
+                                    foreach( $paragraphs  as $p_key => $p_value ){
+                                        echo( "<p>".$p_value."</p>\n\n" );
+                                    }
+                                ?>
+                                </div>
+
+                                <div class="clear"></div>
+
+                                <div id="rabatter" class="content_data">
+                                <h4>Priser &amp; Mängdrabatter</h4>
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <td>
+                                                    Produkt
+                                                </td>
+                                                <td>
+                                                    Antal
+                                                </td>
+                                                <td>
+                                                    Pris
+                                                </td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        <?php
+                                        $p_length = count( $value['prices'] );
+                                        foreach( $value['prices'] as $p_key => $p_value ) { ?>
+                                        <!-- @TODO Infoga Prisrabatterna för alla varianter här -->
+                                            <?php if( !isset( $price_variant ) ) {
+                                                $price_variant = $p_value['product_name'];
+                                            ?>
+                                            <tr class="title">
+                                                <td colspan="3">
+                                                    <h5>
+                                                        <?php echo( $price_variant ); ?>
+                                                    </h5>
+                                                </td>
+                                            </tr>
+                                            <?php
+                                            } elseif( $p_value['product_name'] !== $price_variant ) {
+                                                $price_variant = $p_value['product_name'];
+                                            ?>
+                                            <tr class="title">
+                                                <td colspan="3">
+                                                    <h5>
+                                                        <?php echo( $price_variant ); ?>
+                                                    </h5>
+                                                </td>
+                                            </tr>
+                                            <?php
+                                            } ?>
+                                            <tr>
+                                                <td>
+                                                    <?php echo( $p_value['product_name'] ) ?>
+                                                </td>
+                                                <td>
+                                                    <?php
+                                                        if( is_null($p_value['min_amount']) && is_null($p_value['max_amount']) && $p_length >= 2 ) {
+                                                            echo('1+');
+                                                        } elseif( is_null($p_value['min_amount']) && is_null($p_value['max_amount']) ) {
+                                                            echo('1');
+                                                        } elseif( $p_value['min_amount'] === $p_value['max_amount'] ) {
+                                                            echo($p_value['min_amount'].( $p_length >= 2 ? '+' : '' ) );
+                                                        } else {
+                                                            echo(
+                                                                    $p_value['min_amount'].
+                                                                    ( is_null($p_value['min_amount'] || $p_value['max_amount']) ? '' : ' - ').
+                                                                    $p_value['max_amount']
+                                                                );
+                                                        }
+                                                    ?>
+                                                </td>
+                                                <td>
+                                                    <?php echo( $p_value['price'] ) ?>
+                                                </td>
+                                            </tr>
+                                        <?php } ?>
+                                        </tbody>
+                                    </table>
+                                </div>
                             
-                            <div id="rabatter" class="content_data">
-                                <ul>
-                                    <?php foreach( $value['prices'] as $p_key => $p_value ) { ?>
-                                    <!-- @TODO Infoga Prisrabatterna för alla varianter här -->
-                                    <?php } ?>
-                                <ul>
                             </div>
                         
                         </div>
