--- a/public/css/products.css
+++ b/public/css/products.css
@@ -6,6 +6,135 @@
         Purpose of the stylesheet follows.
 */
 
+#body .container .content .content_tabs {
+    display: block;
+    width: 100%;
+    height: 40px;
+    
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    
+    border: none;
+}
+
+#body .container .content .content_tabs,
+#body .container .content .content_tabs li {
+    margin: 0;
+    padding: 0;
+    
+    list-style: none;
+    list-style-type: none;
+    
+    text-align: center;
+}
+
+#body .container .content .content_tabs li {
+    display: block;
+    width: 25%;
+    
+    float: left;
+    
+    box-sizing: border-box;
+    
+    padding: 0px;
+    
+    border-width: 0px 0px 2px;
+    border-style: solid;
+    border-color: rgb(153, 153, 153);
+    
+    color: #000;
+    
+    font-size: 14px;
+    
+    background: rgb(241, 241, 241);
+}
+
+#body .container .content .content_tabs li.active {
+    border-width: 2px 2px 0px;
+    border-radius: 5px 5px 0px 0px;
+    
+    background: rgb(255,255,255);
+}
+
+#body .container .content .content_tabs li:first-child.active {
+    border-width: 2px 2px 0px 0px;
+    border-radius: 0px 5px 0px 0px;
+}
+
+#body .container .content .content_tabs li:last-child.active {
+    border-width: 2px 0px 0px 2px;
+    border-radius: 5px 0px 0px 0px;
+}
+
+#body .container .content .content_tabs li:hover {
+}
+
+#body .container .content .content_tabs li a {
+    
+    display: block;
+    height: 100%;
+    min-height: 30px;
+    width: 100%;
+    
+    padding: 4px 0px 2px;
+    color: #999;
+}
+
+#body .container .content .content_tabs li.active a {
+    padding: 2px 0px 4px;
+}
+
+#body .container .content .content_tabs li:first-child a{
+    padding-left: 1px;
+    padding-right: 1px;
+}
+
+#body .container .content .content_tabs li:first-child.active a{
+    padding-left: 2px;
+    padding-right: 0px;
+}
+
+#body .container .content .content_tabs li:last-child a{
+    padding-left: 1px;
+    padding-right: 1px;
+}
+
+#body .container .content .content_tabs li:last-child.active a{
+    padding-left: 0px;
+    padding-right: 2px;
+}
+    
+#body .container .content .content_tabs li.active a,
+#body .container .content .content_tabs li a:hover {
+    color: #000;
+}
+
+#body .container .content .content_tabs li a img {
+    transition: all 300ms ease-in-out;
+    
+    display: block;
+    width: 30px;
+    height: 30px;
+    
+    margin: 0 auto;
+    
+    position: relative;
+    
+    border: none;
+    
+    filter:grayscale(100%);
+    -webkit-filter:grayscale(100%);
+    -moz-filter:grayscale(100%);
+}
+
+#body .container .content .content_tabs li.active a img,
+#body .container .content .content_tabs li a:hover img {
+    filter:grayscale(0%);
+    -webkit-filter:grayscale(0%);
+    -moz-filter:grayscale(0%);
+}
+
 #body .container.product .content .content_data {
     display: none;
     height: auto;
