--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -124,9 +124,7 @@
             <!-- Sociala Medier -->
             <div class="content" data-tab="social_media" id="social_media">
                  <h2>Facebook</h2>
-                 <!--
                  <div class="fb-like-box" data-href="https://www.facebook.com/StlReklam" data-width="95%" data-show-faces="true" data-header="true" data-stream="true" data-show-border="false" style="display: block; margin: 0 auto;"></div>
-                 -->
             </div>
 
             <!-- Tabs -->
@@ -178,15 +176,26 @@
             <div id="header_wrapper">
                 <div id="header_top_wrapper">
                     <div id="header_top">
-                        <a href="<?php echo $this->basePath(''); ?>">
-                            <img src="<?php echo $this->basePath('img/speedprint.se.svg'); ?>" class="logo" alt="Speedprint.se">
+                        <a href="<?php echo $this->basePath(''); ?>" title="Speedprint.se">
+                            <div class="logo">
+                                <div class="logo_wrapper">
+                                    <img src="<?php echo $this->basePath('img/speedprint.se.s.svg'); ?>" class="logo" alt="S">
+                                </div>
+                                <div class="logo_wrapper">
+                                    <img src="<?php echo $this->basePath('img/speedprint.se.block.svg'); ?>" class="logo" alt="Speedprint.se">
+                                </div>
+                            </div>
+                            <!-- <img src="<?php echo $this->basePath('img/speedprint.se.svg'); ?>" class="logo" alt="Speedprint.se"> -->
                         </a>
                     </div>
                 </div>
                 <div id="menu_wrapper">
                     <ul id="menu" class="backshadow">
-                        <li><a href="#produkter" data-sidebar="open" data-for="products" data-toggle="true">Produkter</a></li>
-                        <li><a href="#information" data-sidebar="open" data-for="information" data-toggle="true">Information</a></li>
+                        <li><a href="#produkter" data-sidebar="open" data-for="products" data-toggle="true" title="Produkter"><img src="/img/ui/icons/menu_white.svg" alt="Produkter"></a></li>
+                        <li><a href="#information" data-sidebar="open" data-for="information" data-toggle="true" title="Information"><img src="/img/ui/icons/information_white.svg" alt="Information"></a></li>
+                        <li><a href="#information" data-sidebar="open" data-for="varukorg" data-toggle="true" title="Varukorg"><img src="/img/ui/icons/shopping_trolley_white.svg" alt="Varukorg"></a></li>
+                        <li><a href="#information" data-sidebar="open" data-for="user_account" data-toggle="true" title="Användarkonto"><img src="/img/ui/icons/user_account_white.svg" alt="Användarkonto"></a></li>
+                        <li><a href="#information" data-sidebar="open" data-for="social_media" data-toggle="true" title="Facebook"><img src="/img/ui/icons/facebook_white.svg" alt="Facebook"></a></li>
                         <li class="search">
                             <input type="text" id="menu_search" class="search" placeholder="Sök Produkt . . ." data-sidebar="open" data-for="search" required>
                             <a href="#clear" class="empty">
