--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -190,15 +190,93 @@ h2 {
 }
 
 #header_top a {
+    
+    display: inline-block;
+    
+    position: relative;
     border: none;
 }
 
-#header_top img.logo {
+#header_top a.sticky {
+    -webkit-animation:logoSlideDown linear 600ms;  /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
+    -moz-animation:logoSlideDown linear 600ms;
+    animation:logoSlideDown linear 600ms;
+ 
+    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+ 
+    -webkit-animation-duration:600ms;
+    -moz-animation-duration:600ms;
+    animation-duration:600ms;
+    
+    width: 64px;
+    
+    top: -100px;
+    z-index: 10000;
+}
+
+#header_top div.logo {
+    transition: 300ms all ease-in-out;
+    
     transform: scale(1.12) rotate(-2deg);
     -webkit-transform: scale(1.12) rotate(-2deg);
     
-    margin: 7px 0px;
-    border: none
+    display: inline-block;
+    width: 361px;
+    height: 85px;
+    margin: 0px;
+    border: none;
+    
+    position: relative;
+    
+    overflow: visible;
+    
+}
+
+#header_top a.sticky div.logo {
+    transform: scale(1.0) rotate(0deg);
+    -webkit-transform: scale(1.0) rotate(0deg);
+    width: 64px;
+    
+    margin-left: 12px;
+}
+
+#header_top div.logo_wrapper {
+    transition: 300ms all ease-in-out;
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#header_top div.logo_wrapper img {
+    -webkit-filter: drop-shadow(2px 2px 4px rgba(0,0,0,.5));
+    -moz-filter: drop-shadow(2px 2px 4px rgba(0,0,0,.5));
+    -ms-filter: drop-shadow(2px 2px 4px rgba(0,0,0,.5));
+    -o-filter: drop-shadow(2px 2px 4px rgba(0,0,0,.5));
+    filter: drop-shadow(2px 2px 4px rgba(0,0,0,.5));
+}
+
+#header_top a.sticky div.logo_wrapper:first-child img {
+    height: 68px;
+}
+
+#header_top div.logo_wrapper:first-child {
+    z-index: 10;
+}
+
+#header_top div.logo_wrapper:last-child {
+    z-index: 9;
+}
+
+#header_top div.logo_wrapper:last-child img {
+    float: right;
+}
+
+#header_top a.sticky div.logo_wrapper:last-child {
+    left: -361px;
+    opacity: 0.0;
 }
 
 #menu_wrapper {
@@ -279,6 +357,9 @@ h2 {
 }
 
 #menu {
+    
+    transition: 300ms padding-left ease-in-out;
+    
     display: block;
     position: relative;
     width: 100%;
@@ -309,11 +390,37 @@ h2 {
 }
 
 #menu_wrapper.sticky #menu {
+    -webkit-animation:menuSlideToRight linear 600ms;  /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
+    -moz-animation:menuSlideToRight linear 600ms;
+    animation:menuSlideToRight linear 600ms;
+ 
+    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+ 
+    -webkit-animation-duration:600ms;
+    -moz-animation-duration:600ms;
+    animation-duration:600ms;
+    
     display: block;
     position: relative;
     width: 100%;
     height: 60px;
     border-radius: 0px 0px 12px 12px;
+}
+
+#menu.sticky_return {
+    -webkit-animation:menuSlideToRightReverse linear 600ms;  /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
+    -moz-animation:menuSlideToRightReverse linear 600ms;
+    animation:menuSlideToRightReverse linear 600ms;
+ 
+    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+ 
+    -webkit-animation-duration:600ms;
+    -moz-animation-duration:600ms;
+    animation-duration:600ms;
 }
 
 #menu li {
@@ -377,6 +484,12 @@ h2 {
     z-index: 1;
     
 }
+#menu li a img {
+    height: 40px;
+    width: 40px;
+    
+    margin: 10px;
+}
 
 #menu li a:hover {
     
@@ -387,6 +500,10 @@ h2 {
     background-repeat: repeat-x, no-repeat;
     background-position: center center, top center;
     
+    background-color: #000;
+    
+    border-radius: 12px;
+    
     box-shadow: 0px 0px 12px rgba(0,0,0,0.65);
     -moz-box-shadow: 0px 0px 12px rgba(0,0,0,0.65);
     -webkit-box-shadow: 0px 0px 12px rgba(0,0,0,0.65),
@@ -396,6 +513,10 @@ h2 {
 
     -webkit-backface-visibility: hidden;
     -webkit-transition: translate3d(0,0,0);
+    
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
     
     z-index: 9999;
 }
@@ -1263,14 +1384,15 @@ h2 {
 #body .container .carousel ul {
     transition: left 300ms ease-in-out;
     
-    display: block;
-    width: 900px;
+    display: inline-block;
+    width: 900000px;
+    height: 180px;
     overflow: hidden;
     position: relative;
 }
 
 #body .container .carousel li {
-    display: block;
+    display: inline-block;
     width: 180px;
     height: 180px;
     
@@ -1371,8 +1493,20 @@ h2 {
 }
 
 #body .container.product .content #beskrivning {
+    column-count: 2;
+    column-gap: 20px;
+    margin-before: 0;
+    margin-after: 0;
+    
     -webkit-column-count: 2;
     -webkit-column-gap: 20px;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    
+    -moz-column-count: 2;
+    -moz-column-gap: 20px;
+    -moz-margin-before: 0;
+    -moz-margin-after: 0;
 }
 
 #body .container .content p {
@@ -2310,6 +2444,22 @@ a:hover {
 @-moz-keyframes slideOut { from { left: calc( -20% + 26px) } to { left: 0% } }
 @keyframes slideOut { from { left: calc( -20% + 26px) } to { left: 0% } }
 
+
+@-webkit-keyframes menuSlideToRight { 0% { padding-left: 12px; } 50% { padding-left: 80px; } 100% { padding-left: 80px; } }
+@-moz-keyframes menuSlideToRight { 0% { padding-left: 12px; } 50% { padding-left: 80px; } 100% { padding-left: 80px; } }
+@keyframes menuSlideToRight { 0% { padding-left: 12px; } 50% { padding-left: 80px; } 100% { padding-left: 80px; } }
+
+
+@-webkit-keyframes menuSlideToRightReverse { 0% { padding-left: 80px; } 50% { padding-left: 80px; } 100% { padding-left: 12px; } }
+@-moz-keyframes menuSlideToRightReverse { 0% { padding-left: 80px; } 50% { padding-left: 80px; } 100% { padding-left: 12px; } }
+@keyframes menuSlideToRightReverse { 0% { padding-left: 80px; } 50% { padding-left: 80px; } 100% { padding-left: 12px; } }
+
+
+@-webkit-keyframes logoSlideDown { 0% { top: -100px; } 50% { top: -100px; } 100% { top: 0px; } }
+@-moz-keyframes menuSlideToRight { 0% { top: -100px; } 50% { top: -100px; } 100% { top: 0px; } }
+@keyframes menuSlideToRight { 0% { top: -100px; } 50% { top: -100px; } 100% { top: 0px; } }
+
+
 @media (max-width: 1330px) {
     @-webkit-keyframes slideOut { from { left: -235px } to { left: 0px } }
     @-moz-keyframes slideOut { from { left: -235px } to { left: 0px } }
@@ -2322,17 +2472,17 @@ a:hover {
 
 .fade-in {
     opacity:0;  /* make things invisible upon start */
-    animation:fadeIn linear 500ms;
     -webkit-animation:fadeIn linear 500ms;  /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
     -moz-animation:fadeIn linear 500ms;
+    animation:fadeIn linear 500ms;
  
     -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
     -moz-animation-fill-mode:forwards;
     animation-fill-mode:forwards;
  
-    animation-duration:500ms;
     -webkit-animation-duration:500ms;
     -moz-animation-duration:500ms;
+    animation-duration:500ms;
 }
 
 .bounceUp {
@@ -2477,7 +2627,7 @@ input.search:valid + a.empty.show:hover {
 
 .sticky {
     position:fixed !important;
-    top:0% !important;
+    top:0%;
 }
 
 .hidden {
