--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -112,7 +112,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="//www.youtube.com/embed/40p-DopZBXI?rel=0&autoplay=1" data-fancybox-group="roll_up_classic_carousel" class="various fancybox" data-fancybox-type="iframe">
+                                        <a href="//www.youtube.com/embed/40p-DopZBXI?rel=0&autoplay=1&controls=0" data-fancybox-group="roll_up_classic_carousel" class="various fancybox" data-fancybox-type="iframe">
                                             <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large_video.png'); ?>" alt="Roll-Up Classic" class="">
                                         </a>
                                     </li>
@@ -139,32 +139,32 @@
 
                         <div class="content">
                             
-                            <ul class="content_tabs">
-                                <li class="active" style="width: 50%;">
+                            <ul class="content_tabs four">
+                                <li class="active">
                                     <a href="#beskrivning" title="Beskrivning"><img src="/img/ui/icons/information.svg" alt="Beskrivning"></a>
                                 </li>
-                                <li style="width: 50%;">
+                                <li>
                                     <a href="#rabatter" title="Priser"><img src="/img/ui/icons/price.svg" alt="Priser"></a>
                                 </li>
-                                <?php if(1==2) { ?>
                                 <li>
                                     <a href="#specifikation" title="Specifikationer"><img src="/img/ui/icons/list.svg" alt="Specifikationer"></a>
                                 </li>
                                 <li>
-                                    <a href="#tillbehor">Tillbehör</a>
+                                    <a href="#tillbehor" title="Tillbehör"><img src="/img/ui/icons/list.svg" alt="Tillbehör"></a>
                                 </li>
-                                <?php } ?>
                             </ul>
                             
                             <div class="content_information">
                                 <div id="beskrivning" class="content_data active">
-                                <h4>Beskrivning</h4>
-                                <?php
-                                    $paragraphs = explode( "\r\n\r\n" , $value['product_description'] );
-                                    foreach( $paragraphs  as $p_key => $p_value ){
-                                        echo( "<p>".$p_value."</p>\n\n" );
-                                    }
-                                ?>
+                                    <div class="columns_two">
+                                    <h4>Beskrivning</h4>
+                                    <?php
+                                        $paragraphs = explode( "\r\n\r\n" , $value['product_description'] );
+                                        foreach( $paragraphs  as $p_key => $p_value ){
+                                            echo( "<p>".$p_value."</p>\n\n" );
+                                        }
+                                    ?>
+                                    </div>
                                 </div>
 
                                 <div class="clear"></div>
