--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -102,9 +102,7 @@ h2 {
 
 #header_wrapper {
     transition: all 400ms ease-in-out;
-    transform: translate3d(0,0,0) translateZ(0);
     font-smoothing: subpixel-antialiased;
-    transform: translate3d(0,0,0) translateZ(0);
     
     display: block;
     width: 50%;
@@ -357,7 +355,6 @@ h2 {
 }
 
 #menu {
-    
     transition: 300ms padding-left ease-in-out;
     
     display: block;
@@ -390,37 +387,29 @@ h2 {
 }
 
 #menu_wrapper.sticky #menu {
-    -webkit-animation:menuSlideToRight linear 600ms;  /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
-    -moz-animation:menuSlideToRight linear 600ms;
-    animation:menuSlideToRight linear 600ms;
- 
-    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-    -moz-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
- 
-    -webkit-animation-duration:600ms;
-    -moz-animation-duration:600ms;
-    animation-duration:600ms;
-    
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 60px;
     border-radius: 0px 0px 12px 12px;
 }
 
+#menu_wrapper.sticky #menu {
+    -webkit-animation: menuSlideToRight linear 600ms;
+    animation: menuSlideToRight linear 600ms;
+ 
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+ 
+    -webkit-animation-duration: 600ms;
+    animation-duration: 600ms;
+}
+
 #menu.sticky_return {
-    -webkit-animation:menuSlideToRightReverse linear 600ms;  /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
-    -moz-animation:menuSlideToRightReverse linear 600ms;
-    animation:menuSlideToRightReverse linear 600ms;
+    -webkit-animation: menuSlideToRightReverse linear 600ms;
+    animation: menuSlideToRightReverse linear 600ms;
  
-    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-    -moz-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
  
-    -webkit-animation-duration:600ms;
-    -moz-animation-duration:600ms;
-    animation-duration:600ms;
+    -webkit-animation-duration: 600ms;
+    animation-duration: 600ms;
 }
 
 #menu li {
@@ -461,7 +450,7 @@ h2 {
     font-smoothing: subpixel-antialiased;
     transform: translate3d(0,0,0) translateZ(0);
     
-    -webkit-transition: all .25s ease-in-out;
+    -webkit-transition: all 400ms ease-in-out;
     -webkit-font-smoothing: subpixel-antialiased;
     -webkit-transform: translate3d(0,0,0) translateZ(0);
     
@@ -471,7 +460,7 @@ h2 {
     -moz-box-sizing: border-box;
     height: 60px;
     border-radius: 0px;
-    padding: 0 12px;
+    padding: 0px;
     
     color: #fff;
     text-decoration: none;
@@ -481,18 +470,16 @@ h2 {
                     1px 0px #000,
                     -1px 0px #000;
     
-    z-index: 1;
-    
 }
+
 #menu li a img {
-    height: 40px;
-    width: 40px;
-    
-    margin: 10px;
+    transition: all 200ms ease-in-out;
+    height: 30px;
+    width: 30px;
+    margin: 15px;
 }
 
 #menu li a:hover {
-    
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     
@@ -517,8 +504,12 @@ h2 {
     transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
+}
+#menu li a:hover img {
+    height: 50px;
+    width: 50px;
     
-    z-index: 9999;
+    margin: 5px;
 }
 
 #menu li input.search {
@@ -552,6 +543,13 @@ h2 {
     line-height: 16px;
     
     outline: 0;
+    
+    z-index: 10;
+}
+@media (max-width: 1600px) {
+    #menu li input.search {
+        width: 240px;
+    }
 }
 
 #breadcumbs_wrapper {
@@ -1492,7 +1490,7 @@ h2 {
     line-height: 20px;
 }
 
-#body .container.product .content #beskrivning {
+#body .container.product .content .columns_two {
     column-count: 2;
     column-gap: 20px;
     margin-before: 0;
@@ -2609,13 +2607,11 @@ input.search:valid + a.empty.show:hover {
 
 .notransition, .preload * {
     -webkit-transition: none !important;
-    -moz-transition: none !important;
     -o-transition: none !important;
     -ms-transition: none !important;
     transition: none !important;
     
     -webkit-animation: none !important;
-    -moz-animation: none !important;
     -o-animation: none !important;
     -ms-animation: none !important;
     animation: none !important;
@@ -2627,7 +2623,7 @@ input.search:valid + a.empty.show:hover {
 
 .sticky {
     position:fixed !important;
-    top:0%;
+    top: 0px;
 }
 
 .hidden {
