Fixed more with products page, also add new database dump

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -39,7 +39,7 @@
                                     <li data-sidebar-interact='true' data-for='varukorg'>
                                         <a href="#buy"> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a>
                                         <div class="data hidden" data-id="1" data-name="Roll-Up Classic" data-icon="rollup_classic_large.png" data-manufacturer="Expolinc" data-price="2250" data-vat="25"></div>
-                                        <ul class="has-children backshadow">
+                                        <ul class="has-children">
                                             <li>
                                                 <a href="#buy">
                                                     <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> 85 x 215 cm
